# app/main.go
@@ -3,8 +3,11 @@ package main
 import (
 	"context"
 	"encoding/json"
+	"fmt"
+	"math"
 	"net/http"
 	"patrickyau/interview-test-server/api"
+	"strconv"
 	"time"
 
 	// Import the ginzerolog package
@@ -13,38 +16,13 @@ import (
 	"github.com/go-openapi/runtime/middleware"
 	chimiddleware "github.com/oapi-codegen/nethttp-middleware"
 
-	// "github.com/gin-gonic/gin"
-	"github.com/go-chi/chi"
-	// "github.com/go-openapi/runtime/middleware"
-
-	// ginzerolog "github.com/dn365/gin-zerolog"
-	// "github.com/gin-gonic/gin"
+	"github.com/go-chi/chi/v5"
 	"github.com/rs/zerolog"
 	"github.com/rs/zerolog/log"
-	// Import the api package
 )
 
 func main() {
 	zerolog.TimeFieldFormat = time.RFC3339 //zerolog.TimeFormatUnix
-
-	// gin.SetMode(gin.DebugMode)
-	// router := gin.New()
-
-	// router.Use(ginzerolog.Logger("gin")) // Use the ginzerolog middleware
-	// router.Use(gin.Recovery())           // to recover gin automatically
-
-	// router.GET("/", func(c *gin.Context) {
-	// 	c.JSON(http.StatusOK, gin.H{"message": "Hello, this is the Interview Test Server!"})
-	// })
-	// router.GET("/health", func(c *gin.Context) {
-	// 	c.JSON(http.StatusOK, gin.H{"Status": "OK"})
-	// })
-	// router.GET("/tax-calculator", getTaxCalculatorInstructionsByYear)
-	// router.GET("/tax-calculator/tax-year", getAllTaxCalculatorInstructions)
-	// router.GET("/tax-calculator/tax-year/:year", getTaxCalculatorInstructionsByYear)
-	// router.POST("/tax-calculator/tax-year/:year", postTaxCalculationsByYear)
-
-	// router.Run(":8080")
 
 	service := NewTaxService()
 	s := NewServer(service)
@@ -104,39 +82,10 @@ func main() {
 	}
 }
 
-func NewServer(taxServiice *TaxService) api.StrictServerInterface {
+func NewServer(taxService *TaxService) api.StrictServerInterface {
 	return &server{
-		// ThingService: thingService,
+		TaxService: taxService,
 	}
-}
-
-type server struct {
-	// *ThingService
-}
-
-// Calculate implements api.StrictServerInterface.
-func (s *server) Calculate(ctx context.Context, request api.CalculateRequestObject) (api.CalculateResponseObject, error) {
-	panic("unimplemented")
-}
-
-// Check implements api.StrictServerInterface.
-func (s *server) Check(ctx context.Context, request api.CheckRequestObject) (api.CheckResponseObject, error) {
-	panic("unimplemented")
-}
-
-// GetAllTaxCalculator implements api.StrictServerInterface.
-func (s *server) GetAllTaxCalculator(ctx context.Context, request api.GetAllTaxCalculatorRequestObject) (api.GetAllTaxCalculatorResponseObject, error) {
-	panic("unimplemented")
-}
-
-// GetTaxCalculator implements api.StrictServerInterface.
-func (s *server) GetTaxCalculator(ctx context.Context, request api.GetTaxCalculatorRequestObject) (api.GetTaxCalculatorResponseObject, error) {
-	panic("unimplemented")
-}
-
-// GetTaxCalculatorByYear implements api.StrictServerInterface.
-func (s *server) GetTaxCalculatorByYear(ctx context.Context, request api.GetTaxCalculatorByYearRequestObject) (api.GetTaxCalculatorByYearResponseObject, error) {
-	panic("unimplemented")
 }
 
 type TaxService struct {
@@ -146,12 +95,108 @@ func NewTaxService() *TaxService {
 	return &TaxService{}
 }
 
+type server struct {
+	*TaxService
+}
+
+func (s *TaxService) Check(ctx context.Context, request api.CheckRequestObject) (api.CheckResponseObject, error) {
+	return api.Check200JSONResponse{
+		Status: "ok",
+	}, nil
+}
+
+func (s *TaxService) GetTaxCalculator(ctx context.Context, request api.GetTaxCalculatorRequestObject) (api.GetTaxCalculatorResponseObject, error) {
+	taxBrackets, err := GetTaxCalculatorInstructionsByYear("")
+	if err != nil {
+		// c.IndentedJSON(http.StatusNotFound, err)
+		return nil, fmt.Errorf("error: %v", err)
+	}
+	var response api.GetTaxCalculator200JSONResponse
+	for _, bracket := range taxBrackets {
+		response = append(response, mapTaxBracketToAPITaxBracket(bracket))
+	}
+	return response, nil
+}
+
+func mapTaxBracketToAPITaxBracket(taxBracket TaxBracket) api.TaxBracket {
+	apiTaxBracket := api.TaxBracket{
+		Min:  taxBracket.Min,
+		Max:  taxBracket.Max,
+		Rate: taxBracket.Rate,
+	}
+	if taxBracket.TaxOwed != 0.0 {
+		apiTaxBracket.TaxOwed = taxBracket.TaxOwed
+	}
+	return apiTaxBracket
+}
+
+func (s *TaxService) GetTaxCalculatorByYear(ctx context.Context, request api.GetTaxCalculatorByYearRequestObject) (api.GetTaxCalculatorByYearResponseObject, error) {
+
+	if _, err := strconv.Atoi(request.Year); err != nil {
+		return api.GetTaxCalculatorByYear400Response{}, nil
+	}
+	var response api.GetTaxCalculatorByYear200JSONResponse
+	taxBrackets, err := GetTaxCalculatorInstructionsByYear(request.Year)
+	if err != nil {
+		return api.GetTaxCalculatorByYear404Response{}, nil
+	}
+
+	for _, bracket := range taxBrackets {
+		response = append(response, mapTaxBracketToAPITaxBracket(bracket))
+	}
+	return response, nil
+}
+
+func mapTaxBracketsToAPITaxBrackets(taxBrackets []TaxBracket) []api.TaxBracket {
+	apiTaxBrackets := make([]api.TaxBracket, len(taxBrackets))
+	for i, bracket := range taxBrackets {
+		apiTaxBrackets[i] = mapTaxBracketToAPITaxBracket(bracket)
+	}
+	return apiTaxBrackets
+}
+
+func (s *TaxService) GetAllTaxCalculator(ctx context.Context, request api.GetAllTaxCalculatorRequestObject) (api.GetAllTaxCalculatorResponseObject, error) {
+	response := api.GetAllTaxCalculator200JSONResponse{}
+	for year, taxBrackets := range TaxBrackets {
+		response[year] = mapTaxBracketsToAPITaxBrackets(taxBrackets)
+	}
+	return response, nil
+}
+
+func (s *TaxService) Calculate(ctx context.Context, request api.CalculateRequestObject) (api.CalculateResponseObject, error) {
+	salary := request.Body.Salary
+
+	err := ValidateSalary(salary)
+	if err != nil {
+		return api.Calculate400Response{}, nil
+	}
+
+	year := request.Year
+	log.Debug().Msgf("postTaxCalculationsByYear() year: %v, salary: %.2f", year, salary)
+	taxBrackets, err := GetTaxCalculatorInstructionsByYear(year)
+	if err != nil {
+		return api.Calculate400Response{}, nil
+	}
+
+	taxOwed := CalculateTaxAmount(year, taxBrackets, salary)
+	return api.Calculate200JSONResponse{
+		TaxYear:          taxOwed.TaxYear,
+		Salary:           taxOwed.Salary,
+		EffectiveTaxRate: taxOwed.EffectiveTaxRate,
+		TotalTaxOwed:     taxOwed.TotalTaxOwed,
+		TaxOwedPerBand:   mapTaxBracketsToAPITaxBrackets(taxOwed.TaxOwnedPerBand),
+	}, nil
+}
+
 func NewSecurityMiddleware() func(http.Handler) http.Handler {
 	return func(next http.Handler) http.Handler {
 		return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 			ctx := r.Context()
 
-			scopes, ok := ctx.Value(api.ApiKeyScopes).([]string)
+			// const (
+			// 	ApiKeyScopes = "apiKey.Scopes"
+			// )
+			scopes, ok := ctx.Value("apiKey.Scopes").([]string)
 			if !ok {
 				// no scopes required for this endpoint, no X-Api-Key required
 				next.ServeHTTP(w, r)
@@ -179,63 +224,23 @@ func NewSecurityMiddleware() func(http.Handler) http.Handler {
 	}
 }
 
-func (s *TaxService) Check(ctx context.Context, request api.CheckRequestObject) (api.CheckResponseObject, error) {
-	return api.Check200JSONResponse{
-		Status: "ok",
-	}, nil
+type Salary struct {
+	Salary float64 `json:"salary"`
 }
 
-func (s *TaxService) GetTaxCalculater(ctx context.Context, request api.GetTaxCalculatorRequestObject) (api.GetTaxCalculatorResponseObject, error) {
-	return nil, nil
+type Err struct {
+	Code    uint   `json:"code"`
+	Field   string `json:"field"`
+	Message string `json:"message"`
 }
 
-func (s *TaxService) GetAllTaxCalculator(ctx context.Context, request api.GetAllTaxCalculatorRequestObject) (api.GetAllTaxCalculatorResponseObject, error) {
-	return nil, nil
+type TaxOwed struct {
+	EffectiveTaxRate string       `json:"effective_tax_rate"`
+	Salary           float32      `json:"salary"`
+	TaxYear          string       `json:"tax_year"`
+	TaxOwnedPerBand  []TaxBracket `json:"tax_owned_per_band"`
+	TotalTaxOwed     float32      `json:"total_tax_owed"`
 }
-
-func (s *TaxService) GetTaxCalculatorByYear(ctx context.Context, request api.GetTaxCalculatorByYearRequestObject) (api.GetTaxCalculatorByYearResponseObject, error) {
-	return nil, nil
-}
-
-func (s *TaxService) Calculate(ctx context.Context, request api.CalculateRequestObject) (api.CalculateResponseObject, error) {
-	return nil, nil
-}
-
-// getTaxCalculatorInstructionsByYear responds with the tax calculator instructions by the year.
-// If the year is not provided, it defaults to year 2022.
-// func getTaxCalculatorInstructionsByYear(c *gin.Context) {
-// 	year := c.Param("year")
-// 	// gin.DebugPrintFunc("getTaxCalculatorInstructions called with year: %s\n", year)
-// 	taxBrackets, err := GetTaxCalculatorInstructionsByYear(year)
-// 	if err != nil {
-// 		c.IndentedJSON(http.StatusNotFound, err)
-// 		return
-// 	}
-// 	c.IndentedJSON(http.StatusOK, taxBrackets)
-// }
-
-// // getAllTaxCalculatorInstructions responds with the list of tax calculator instructions.
-// func getAllTaxCalculatorInstructions(c *gin.Context) {
-// 	c.IndentedJSON(http.StatusOK, TaxBrackets)
-// }
-
-// type Salary struct {
-// 	Salary float64 `json:"salary"`
-// }
-
-// type Err struct {
-// 	Code    uint   `json:"code"`
-// 	Field   string `json:"field"`
-// 	Message string `json:"message"`
-// }
-
-// type TaxOwed struct {
-// 	EffectiveTaxRate string       `json:"effective_tax_rate"`
-// 	Salary           float64      `json:"salary"`
-// 	TaxYear          string       `json:"tax_year"`
-// 	TaxOwnedPerBand  []TaxBracket `json:"tax_owned_per_band"`
-// 	TotalTaxOwed     float64      `json:"total_tax_owed"`
-// }
 
 // // postTaxCalculationsByYear calculates the tax for the year from JSON received in the request body.
 // func postTaxCalculationsByYear(c *gin.Context) {
@@ -283,56 +288,63 @@ func (s *TaxService) Calculate(ctx context.Context, request api.CalculateRequest
 // 	})
 // }
 
-// func GetTaxCalculatorInstructionsByYear(year string) ([]TaxBracket, *Err) {
-// 	if year == "" {
-// 		year = "2022"
-// 	}
-// 	taxBrackets := TaxBrackets[year]
-// 	if len(taxBrackets) == 0 {
-// 		return nil, &Err{
-// 			Code:    http.StatusNotFound,
-// 			Field:   "tax-year",
-// 			Message: fmt.Sprintf("tax brackets for the tax year %s is not found", year),
-// 		}
-// 	}
-// 	return taxBrackets, nil
-// }
+func GetTaxCalculatorInstructionsByYear(year string) ([]TaxBracket, *Err) {
+	if year == "" {
+		year = "2022"
+	}
+	taxBrackets := TaxBrackets[year]
+	if len(taxBrackets) == 0 {
+		return nil, &Err{
+			Code:    http.StatusNotFound,
+			Field:   "year",
+			Message: fmt.Sprintf("tax brackets for the tax year %v is not found", year),
+		}
+	}
+	return taxBrackets, nil
+}
 
-// func ValidateSalary(salary float64) *Err {
-// 	if salary < 0 {
-// 		return &Err{
-// 			Code:    http.StatusBadRequest,
-// 			Field:   "salary",
-// 			Message: fmt.Sprintf("the salary for the tax year must be greater than 0. Invalid value: %.2f", salary),
-// 		}
+// func ValidateYear(year string) error {
+// 	if salary <= 0.0 {
+// 		return fmt.Errorf("the salary for the tax year must be greater than 0. Invalid value: %.2f", salary)
 // 	}
 // 	return nil
 // }
-//
-// func CalculateTaxAmount(year string, taxBrackets []TaxBracket, salary float64) TaxOwed {
-// 	var taxAmount float64
-// 	var taxPerBracket []TaxBracket
-// 	totalTaxAmount := 0.0
-// 	for _, bracket := range taxBrackets {
-// 		if salary > bracket.Min {
-// 			leftover := salary
-// 			if bracket.Max > 0 && salary > bracket.Max {
-// 				leftover = math.Min(salary, bracket.Max)
-// 			}
-// 			taxableIncome := leftover - bracket.Min
-// 			taxAmount = taxableIncome * bracket.Rate
-// 			totalTaxAmount += taxAmount
-// 			bracket.TaxOwed = math.Round(taxAmount*100) / 100
 
-// 			taxPerBracket = append(taxPerBracket, bracket)
-// 		}
-// 	}
-// 	effectiveRate := totalTaxAmount / salary
-// 	return TaxOwed{
-// 		EffectiveTaxRate: fmt.Sprintf("%.2f", effectiveRate*100) + "%",
-// 		Salary:           salary,
-// 		TaxYear:          year,
-// 		TaxOwnedPerBand:  taxPerBracket,
-// 		TotalTaxOwed:     math.Round(totalTaxAmount*100) / 100,
-// 	}
-// }
+func ValidateSalary(salary float32) *Err {
+	if salary < 0 {
+		return &Err{
+			Code:    http.StatusBadRequest,
+			Field:   "salary",
+			Message: fmt.Sprintf("the salary for the tax year must be greater than 0. Invalid value: %.2f", salary),
+		}
+	}
+	return nil
+}
+
+func CalculateTaxAmount(year string, taxBrackets []TaxBracket, salary float32) TaxOwed {
+	var taxAmount float32
+	var taxPerBracket []TaxBracket
+	totalTaxAmount := float32(0.0)
+	for _, bracket := range taxBrackets {
+		if salary > bracket.Min {
+			leftover := salary
+			if bracket.Max > 0 && salary > bracket.Max {
+				leftover = float32(math.Min(float64(salary), float64(bracket.Max)))
+			}
+			taxableIncome := leftover - bracket.Min
+			taxAmount = taxableIncome * bracket.Rate
+			totalTaxAmount += taxAmount
+			bracket.TaxOwed = float32(math.Round(float64(taxAmount*100)) / 100)
+
+			taxPerBracket = append(taxPerBracket, bracket)
+		}
+	}
+	effectiveRate := totalTaxAmount / salary
+	return TaxOwed{
+		EffectiveTaxRate: fmt.Sprintf("%.2f", effectiveRate*100) + "%",
+		Salary:           salary,
+		TaxYear:          year,
+		TaxOwnedPerBand:  taxPerBracket,
+		TotalTaxOwed:     float32(math.Round(float64(totalTaxAmount)*100) / 100),
+	}
+}
